Arreglé estilos y agregué nuevas animaciones

--- a/src/app/components/listar-metas/listar-metas.html
+++ b/src/app/components/listar-metas/listar-metas.html
@@ -1,5 +1,7 @@
 @for(meta of listaDeMetas; track meta.id){
-  <app-metas [meta]="meta"></app-metas>
+  <div>
+    <app-metas [meta]="meta"></app-metas>
+  </div>
 }
 
 
