--- a/src/app/components/nuevo/nuevo.html
+++ b/src/app/components/nuevo/nuevo.html
@@ -49,7 +49,7 @@
       @if(metasIng){
           <button class="boton boton--rojo" (click)="eliminarMeta()">Borrar</button>
       }
-      <button class="boton boton--gris">Cancelar</button>
+  <button class="boton boton--gris" (click)="cancelar()">Cancelar</button>
     </div>
   </div>
 </section>
