--- a/src/app/layout/pie/pie.scss
+++ b/src/app/layout/pie/pie.scss
@@ -1,3 +1,8 @@
+// .pie {
+//   @apply shadow bg-gradient-to-r from-pink-500 to-purple-500 h-md text-xs text-right pr-2 text-white relative;
+// }
+
 .pie {
-  @apply shadow bg-gradient-to-r from-pink-500 to-purple-500 h-md text-xs text-right pr-2 text-white relative;
+  @apply shadow bg-gradient-to-r from-pink-500 to-purple-500 h-md text-xs text-right pr-2 text-white fixed bottom-0 w-full;
 }
+
