--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,6 @@
   height: calc(100vh - theme("height.principal"));
   @apply flex;
 }
-
 .boton {
     @apply text-sm font-bold py-1 px-4 rounded-full;
 }
@@ -23,6 +22,7 @@
 
 .boton--rojo {
     @apply text-red-500 border border-red-500 hover:bg-red-500 hover:text-white;
+    box-shadow: 4px 5px 4px -2px rgba(72, 79, 96, 0.4), -6px -6px 12px -1px white;
 }
 
 .boton--gris {
@@ -36,9 +36,41 @@
 
 .input {
     @apply w-full border rounded-xl p-2 focus:outline-none focus:bg-white focus:border-gray-500;
-    box-shadow:  -4px -4px 6px -1px white, inset 2px 2px 8px -1px rgba(72, 79, 96, 0.5)
+    box-shadow: -4px -4px 6px -1px white, inset 2px 2px 8px -1px rgba(72, 79, 96, 0.5)
 }
 
 .botones {
     @apply bg-gradient-to-r from-gray-700 via-gray-200 to-gray-200 px-4 py-3 flex justify-between;
+}
+
+@keyframes enter {
+    0% {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes exit {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    100% {
+        opacity: 0;
+        transform: scale(0.6);
+    }
+}
+
+::view-transition-old(root) {
+    animation: exit 1s ease 0s 1 normal forwards;
+}
+
+::view-transition-new(root) {
+    animation: enter 1s ease 0s 1 normal forwards;
 }
